# Nexkey

./: CMakeLists.txt  LICENSE  README.md
cmake/: Packaging.cmake
libvkcore/: CMakeLists.txt
libvkcore/include/vkcore/: VKBuffer.hpp  VKEncoding.hpp  VKTelex.hpp  VKTypes.hpp  VKViqr.hpp  VKVni.hpp
libvkcore/src/: VKBuffer.cpp  VKCommon.hpp  VKEncoding.cpp  VKTelex.cpp  VKViqr.cpp  VKVni.cpp
nexkey-cli/: CMakeLists.txt  main.cpp
nexkey-fcitx5/: CMakeLists.txt  NexKeyEngine.cpp  NexKeyEngine.hpp
nexkey-fcitx5/data/: nexkey-addon.conf  nexkey.conf
nexkey-gui/: CMakeLists.txt  DBusService.cpp  DBusService.hpp  SettingsWindow.cpp  SettingsWindow.hpp  TrayManager.cpp  TrayManager.hpp  main.cpp
nexkey-gui/dbus/: org.nexkey.Settings.xml
nexkey-gui/resources/: nexkey.qrc
nexkey-ibus/: CMakeLists.txt  NexKeyIBusEngine.cpp  NexKeyIBusEngine.hpp  main.cpp
nexkey-ibus/data/: nexkey.xml
packaging/: nexkey.desktop
packaging/appimage/: AppRun
packaging/deb/: control  postinst  postrm
scripts/: build.sh  package-appimage.sh  package-deb.sh
tests/: CMakeLists.txt  test_buffer.cpp  test_common.hpp  test_encoding.cpp  test_telex.cpp  test_vni.cpp
